crates/turbomcp-wasm-macros/tests/compile_fail/server_on_fn.stderr
error: expected `impl`
 --> tests/compile_fail/server_on_fn.rs:6:1
  |
6 | fn not_an_impl() {}
  | ^^
